做了大量更正
1 改变了英文
2 改变了个人简历和成果页
3 两个封皮都改了

--- a/LATEX参考模版/main_file.tex
+++ b/LATEX参考模版/main_file.tex
@@ -37,74 +37,74 @@
 \authorEn{XX XX（作者）}
 
 %作者所在学院
-\department{XXX}
+\department{信息科学与工程学院}
 
 
 %指导教师中文姓名                                               
-\advisor{XXXX}
+\advisor{康某某}
 
 %指导教师英文姓名                                  
 \advisorEn{XX XX（指导教师）}
 
 %指导教师职称中文
-\advisorLevel{XXXX}
+\advisorLevel{讲师}
 
 %指导教师职称英文
 \advisorLevelEn{XXXX}
 
 %指导教师单位中文名
-\advisorDepartment{XXXX}
+\advisorDepartment{计算机科学与工程学院}
 
 %副指导教师中文姓名
-\fuadvisor{XXXX}
+\fuadvisor{林某某}
 
 %副指导教师英文姓名
 \fuadvisorEn{XX XX（副指导教师）}
 
 %副指导教师职称中文
-\fuadvisorLevel{XXXX}
+\fuadvisorLevel{高级工程师}
 
 %副指导教师职称英文
 \fuadvisorLevelEn{XXXX}
 
 %副指导教师单位中文名
-\fuadvisorDepartment{XXXX}
+\fuadvisorDepartment{XXXX科技有限公司}
 
-%申请学位级别
-\degreeLevel{XXXX}
+%申请学位层次
+\degreeLevel{硕士}
 
-%学科类别
+%专业类别
 \subjectCategory{电子信息}
 
-%学科专业中文名称
+%专业领域中文名称
 \subjectMajor{计算机技术}
 
 %学科专业英文名称
-\subjectMajorEn{XXXX（学科专业英文名称）}
+\subjectMajorEn{Electronic And Information Engineering}
 
 %论文提交日期
-\paperSubmitDate{XXXX}
+\paperSubmitDate{2023年6月1日}
 
 %论文答辩日期
-\paperDefenseDate{XXXX}
+\paperDefenseDate{2023年6月9日}
 
 %学位授予日期
-\degreeAwardingDate{XXXX}
+\degreeAwardingDate{2023年7月1日}
 
 %答辩委员会主席
-\defenseChair{XXXX}
+\defenseChair{爨某某}
 
 %答辩委员会主席职称
-\defenseChairLevel{XXXX}
+\defenseChairLevel{教授}
 
 %中文标题页底部日期
 \titlePageBottomDate{202X年X月}       
 
 %英文标题页底部日期
-\titlePageBottomDateEn{April,2023(英文日期)}
+\titlePageBottomDateEn{June,2023(英文日期)}
 
 %封面底部日期
-\coverPageBottomDate{二〇二X年X月}
+\coverPageBottomDate{二〇二三年六月}
 
 \begin{document}
 \makecover  %封面
