--- a/LATEX参考模版/misc/resume.tex
+++ b/LATEX参考模版/misc/resume.tex
@@ -20,14 +20,14 @@
 xxx\\
 xxx
 
-\section*{已发表的学术论文} % 发表的和录用的合在一起
+\section*{攻读硕士学位期间取得的科研成果} % 发表的和录用的合在一起
 \begin{enumerate}
 \renewcommand{\labelenumi}{[\theenumi]}
 \item 
 T. G. Dietterich, R. H. Lathrop and T. Lozano-Pérez. Solving the multiple-instance problem with axis-parallel rectangles. Artificial Intelligence, 1997, 89(1-2): 31-71.
 \end{enumerate}
 
-\section*{参加的科研项目}
+\section*{攻读硕士学位期间主持或参加的科研项目}
 \begin{enumerate}
 \renewcommand{\labelenumi}{[\theenumi]}
 \item 国家自然科学基金面上项目（6xxx2）：xxx在xxx及其应用，2016.1—2020.12，负责人：
