导师姓名显示方式做了修改

--- a/LATEX参考模版(专业硕士学位)/thesis-uestc.cls
+++ b/LATEX参考模版(专业硕士学位)/thesis-uestc.cls
@@ -847,8 +847,8 @@
   \vspace{3cm}
   
   \begin{tabular}{>{\raggedleft\arraybackslash}p{0.45\textwidth}p{0.55\textwidth}} 
-   {\sihao Supervisor：} & {\sihao \theadvisorLevelEn \theadvisorEn}  \\
-   {\sihao Associate Supervisor：} & {\sihao \thefuadvisorLevelEn \thefuadvisorEn}  \\
+   {\sihao Supervisor：} & {\sihao \theadvisorLevelEn \theadvisorEn \hspace{3.3pt} \thefuadvisorLevelEn \thefuadvisorEn}  \\
+  % {\sihao Associate Supervisor：} & {\sihao \thefuadvisorLevelEn \thefuadvisorEn}  \\
   \end{tabular}\\
   
   \vspace{5cm}
