--- a/LATEX参考模版(学术学位)/main_file.tex
+++ b/LATEX参考模版(学术学位)/main_file.tex
@@ -44,13 +44,13 @@
 \advisor{康某某}
 
 %指导教师英文姓名                                  
-\advisorEn{XX XX（指导教师）}
+\advisorEn{Jack}
 
 %指导教师职称中文
 \advisorLevel{讲师}
 
 %指导教师职称英文
-\advisorLevelEn{XXXX}
+\advisorLevelEn{Professor}
 
 %指导教师单位中文名
 \advisorDepartment{生命科学学院}
@@ -59,13 +59,13 @@
 \fuadvisor{林某某}
 
 %副指导教师英文姓名
-\fuadvisorEn{XX XX（副指导教师）}
+\fuadvisorEn{JSON}
 
 %副指导教师职称中文
 \fuadvisorLevel{高级工程师}
 
 %副指导教师职称英文
-\fuadvisorLevelEn{XXXX}
+\fuadvisorLevelEn{lecturer}
 
 %副指导教师单位中文名
 \fuadvisorDepartment{XXXX科技有限公司}
